<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/radioGroupWeightUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonKilograms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kilograms"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonGrams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grams" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/radioGroupUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonMetres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metres"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButtonCentimeters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centimeters" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/buttonResetData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_data" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewLastCalcDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/textViewLastCalcBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/textViewLastComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

</LinearLayout>